fix gap for notifications

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -243,7 +243,8 @@ button, a {
 }
 
 .Toastify__toast-container--top-center{
-    margin-top: 1rem;
+    margin-top: 0.25rem;
+    gap: 0.25rem;
 }
 
 .Toastify__toast-theme--light{
